src/app/main-page/message-board/message-board.component.scss
@import '../../../styles.scss';

.message-board {
    @include flex($align: start, $justify: start);
    gap: 16px;
    height: 100%;
    position: relative;

    .message-container {
        @include rounded();
        @include flex($justify: space-between, $align: stretch, $direction: column);
        background-color: $white;
        height: 100%;
        padding-bottom: 20px;
        transition: width 0.125s ease;

        @media (max-width: $breakpoint-md) {
            border-radius: 0;
        }

        &.main-channel {
            width: 55%;

            &:only-child {
                width: 100%;
            }
        }

        &.thread-channel {
            width: 45%;

            @media (max-width: $breakpoint-xl) {
                position: absolute;
                z-index: 2;
                right: 0;
                top: 0;
                height: 100%;
                width: 75%;
                box-shadow: 0px 4px 4px 3px rgba($black, 0.08);
            }

            @media (max-width: $breakpoint-lg) {
                width: 100%;
                box-shadow: none;
            }

        }
    }

    .message-board-header {
        @include flex($direction: column);
        gap: 8px;
        padding: 16px;
        z-index: 2;
        box-shadow: 0px 4px 4px -2px rgba($black, 0.08);

        @media (max-width: $breakpoint-lg) {
            padding: 16px 8px;
        }


        .header-row {
            @include flex($justify: space-between);
            width: 100%;
        }

        .recipient-selector {
            width: 100%;
        }

        .header-left {

            .thread-channel-title {
                font-size: 14px;
                color: $purple-2;
            }

            .channel-title {
                @include flex();
                gap: 8px;

                b {
                    font-size: 24px;
                }

                h2 {
                    font-size: 20px;
                    padding: 8px 0;

                    @media (max-width: $breakpoint-md) {
                        font-size: 18px;
                    }
                }

                &.hover-effect:hover {
                    @include rounded();
                    cursor: pointer;
                    color: $purple-3;
                    background-color: $bg-color;

                    img {
                        filter: invert(35%) sepia(92%) saturate(3979%) hue-rotate(230deg) brightness(99%) contrast(91%);
                    }
                }
            }

            .recipient-input {
                @include rounded();
                width: 100%;
                border: 1px solid $light-purple;
                outline: none;
                padding: 8px;
            }
        }

        .header-right {
            @include flex();
            gap: 16px;

            .close-icon {
                @include rounded($all: 50%);
                width: 32px;
                height: 32px;
                padding: 8px;
                cursor: pointer;

                &:hover {
                    background-color: $bg-color;
                }
            }

            .channel-members {
                @include flex();
                gap: 12px;
                cursor: pointer;

                @media (max-width: $breakpoint-md) {
                    display: none;
                }

                .user_from_channels_avatar {
                    .avatar {
                        margin-right: -10px;
                    }
                }

                .channel-members-count {
                    font-weight: 700;
                    font-size: 20px;
                }
            }
        }
    }

    .message-board-content {
        overflow-y: auto;
        overflow-x: hidden;
        margin-right: 5px;
        display: flex;
        flex-direction: column-reverse;
        flex: 1;

        .messages-container {
            display: flex;
            flex-direction: column-reverse;
        }

        .no-messages-container {
            color: $gray;
            padding: 16px 32px;
            @include flex($align: start, $direction: column);
            gap: 8px;

            h2 {
                color: $black;
                font-size: 20px;
            }

            .channel-description {
                color: $gray;
                font-style: italic;
                font-size: 14px;
            }

            .no-messages-container-direct {
                @include flex($justify: start);
                gap: 8px;

            }

            .partner-name {
                color: $purple-2;
            }
        }
    }

    .message-input-container {
        padding: 0 32px;
        margin-top: 20px;
    }
}

.userAvatar {
    width: 48px !important;
    height: 48px !important;
}

.members_button {
    width: 40px;
    height: 40px;
    cursor: pointer;
    margin-right: 15px;
    display: inline-block;
}

.members_button_small {
    display: none;
}

@media (max-width: $breakpoint-md) {
    .members_button_small {
        display: initial;
        width: 40px;
        height: 40px;
        cursor: pointer;
        margin-right: 15px;
        display: inline-block;
    }

    .members_button {
        display: none;
    }
}

.channel_title {
    display: flex;
    align-items: center;
    padding: 0 16px;
    cursor: pointer;
    @include rounded();

    b {
        font-size: 24px;
    }

    h2 {
        margin: 0 10px;
    }

    &:hover {
        color: $purple-3;
        background-color: $bg-color;
    }

    img {
        transition: filter 0.1s ease;
    }

    &:hover img {
        filter: invert(35%) sepia(92%) saturate(3979%) hue-rotate(230deg) brightness(99%) contrast(91%);
    }
}

.user_add_to_channel {
    top: 203px;
    width: 514px;
    height: 294px;
    right: 30px;
    border-top-right-radius: 0;
}

